Bug 259761 - Misleading message from Burn dialog
Summary: Misleading message from Burn dialog
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: 2.0.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Michał Małek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-13 20:33 UTC by Jonathan Ryshpan
Modified: 2013-05-03 07:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Ryshpan 2010-12-13 20:33:28 UTC
Version:           2.0.1 (using KDE 4.5.3) 
OS:                Linux

If I try to burn a DVD with more data than it can hold, the available data space automatically increases from 4.4 GiB to 8.0 GiB (capacity of BluRay?) and the message appears "Please insert a suitable medium", which made me think (wrongly) that there was some problem with wodim.  I would expect an error box saying "Insufficient space on medium for project" or a more informative error message.

Reproducible: Always

Steps to Reproduce:
Insert DVD into drive
Start a data project
Put more than 4.4 GiB data into the project (I loaded 6 GiB)
Click "Burn"

Actual Results:  
Message "Please insert a suitable medium"

Expected Results:  
Error box or message "

Error box or message "Insufficient space on medium for project"
Comment 1 José Millán Soto 2013-04-28 17:20:41 UTC
Patch proposed in https://git.reviewboard.kde.org/r/110230/
Comment 2 Michał Małek 2013-05-03 07:55:09 UTC
Git commit 6b7df0ba4aa47e1129e797e53a6844e4237ae50d by Michal Malek, on behalf of José Millán Soto.
Committed on 03/05/2013 at 09:18.
Pushed by mmalek into branch 'master'.

Inform the user if the inserted medium is not suitable

In the burn dialog, the message displayed when an incorrect medium was
inserted was the same that the one when there was no medium inserted.
As a result, the user might think that there's a problem with the device
instead of a problem with the medium.

If there's a medium inserted on a device but it's no suitable (for
example if it's a CD and it should be a DVD, or if it's a read-only
medium, or if the capacity of the medium is not enough), the user will
be informed of the reason of the issue.

mediaRequestStrings added as a static method to Medium class. This
method takes as parameters a list of unsuitable mediums and the
requeriments for a medium to be suitable and returns a QStringList with
messages describing the problem of each unsuitable medium.

MediaSelectionComboBox was modified to call mediaRequestStrings when
a medium is inserted but is not suitable.
FIXED-IN: 2.1.0
REVIEW: 110230

M  +1    -0    ChangeLog
M  +75   -0    libk3b/tools/k3bmedium.cpp
M  +6    -0    libk3b/tools/k3bmedium.h
M  +22   -2    src/k3bmediaselectioncombobox.cpp
M  +1    -0    src/k3bmediaselectioncombobox.h

http://commits.kde.org/k3b/6b7df0ba4aa47e1129e797e53a6844e4237ae50d